--- a/pom.xml
+++ b/pom.xml
@@ -39,8 +39,20 @@
                         </execution>
                     </executions>
                 </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-release-plugin</artifactId>
+                    <version>2.5.3</version>
+                    <configuration>
+                        <goal>install</goal>
+                        <autoVersionSubmodules>true</autoVersionSubmodules>
+                    </configuration>
+                </plugin>
             </plugins>
         </pluginManagement>
     </build>
-
+    <scm>
+        <developerConnection>scm:git:git@github.com:vitargo/vs-pet-clinic.git</developerConnection>
+        <tag>HEAD</tag>
+    </scm>
 </project>
