--- a/release.properties
+++ b/release.properties
@@ -1,11 +1,22 @@
 #release configuration
-#Thu Jul 14 14:20:43 EEST 2022
-scm.tagNameFormat=@{project.artifactId}-@{project.version}
-pushChanges=true
-scm.url=scm\:git\:git@github.com\:vitargo/vs-pet-clinic.git
-preparationGoals=clean verify
-projectVersionPolicyId=default
-remoteTagging=true
+#Thu Jul 14 14:22:17 EEST 2022
+project.rel.org.vitargo\:pet-clinic-data=0.0.1
 scm.commentPrefix=[maven-release-plugin] 
+project.rel.org.vitargo\:vs-pet-clinic=0.0.1
+pushChanges=true
+project.scm.org.vitargo\:vs-pet-clinic.developerConnection=scm\:git\:git@github.com\:vitargo/vs-pet-clinic.git
+project.dev.org.vitargo\:pet-clinic-web=0.0.2-SNAPSHOT
+scm.tag=vs-pet-clinic-0.0.1
+remoteTagging=true
+projectVersionPolicyId=default
+project.rel.org.vitargo\:pet-clinic-web=0.0.1
+project.scm.org.vitargo\:vs-pet-clinic.tag=HEAD
+scm.url=scm\:git\:git@github.com\:vitargo/vs-pet-clinic.git
+scm.tagNameFormat=@{project.artifactId}-@{project.version}
+project.dev.org.vitargo\:pet-clinic-data=0.0.2-SNAPSHOT
+preparationGoals=clean verify
+project.scm.org.vitargo\:pet-clinic-web.empty=true
+project.dev.org.vitargo\:vs-pet-clinic=0.0.2-SNAPSHOT
+project.scm.org.vitargo\:pet-clinic-data.empty=true
 exec.snapshotReleasePluginAllowed=false
-completedPhase=check-poms
+completedPhase=end-release
