--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     </parent>
     <groupId>org.vitargo</groupId>
     <artifactId>vs-pet-clinic</artifactId>
-    <version>0.0.3</version>
+    <version>0.0.4-SNAPSHOT</version>
     <name>vs-pet-clinic</name>
     <description>vs-pet-clinic</description>
     <properties>
@@ -55,6 +55,6 @@
     </build>
     <scm>
         <developerConnection>scm:git:git@github.com:vitargo/vs-pet-clinic.git</developerConnection>
-        <tag>vs-pet-clinic-0.0.3</tag>
+        <tag>HEAD</tag>
     </scm>
 </project>
