--- a/pet-clinic-web/pom.xml
+++ b/pet-clinic-web/pom.xml
@@ -68,6 +68,10 @@
             <version>${webjars-bootstrap.version}</version>
         </dependency>
         <!-- end of webjars -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
